# amdbtx

./: .gitignore  AGENTS.md  BAZZITE_BUILD_INSTRUCTIONS.md  README.md  amdbtx-miner.spec  bench_solver.py  build_and_package_windows.ps1  build_linux_portable.sh  build_linux_portable_bazzite.sh  build_solver.sh  config.example.yaml  do_build.sh  install_amd.cmd  install_amd.ps1  install_amd.sh  install_amd_source.sh  install_wsl.sh  launch_miner.py  package_linux.sh  package_windows.ps1  pyproject.toml  start_mining.sh  test_coinbase_split.py  test_consensus_digest.py  test_gpu_digest_ab.py  test_gpu_words_consensus.py  test_pool_submit_diag.py  test_sigma_gate_rate.py  test_solo_dev_fee.py  test_solver_stderr.py  test_solver_subprocess.py  test_v2_seed.py
amdbtx-private-solver/: CMakeLists.txt
amdbtx-private-solver/src/: main.cpp  sha256.h  transcript.h
amdbtx-private-src/: AGENTS.md  pyproject.toml
amdbtx-private-src/amdbtx_miner/: __main__.py  benchmark.py  config.py  gbt_solve_wrapper.py  stratum_client.py
hiveos/: build-package.sh
hiveos/amdbtx/: README.md  h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh
scripts/: publish_release.sh
solver/: CMakeLists.txt  build.sh  build_windows.ps1  hip_toolchain.sh
solver/src/: field.cpp  field.h  gpu_sha256.h  gpu_sha256.hip  hip_kernels.hip  main.cpp  matmul_kernel.h  matmul_kernel.hip  matrix.cpp  matrix.h  noise.cpp  noise.h  sha256.cpp  sha256.h  solve.cpp  solve.h  solve_gpu.hip  transcript.cpp  transcript.h  uint256.h
src/: run_miner.py
src/amdbtx_miner/: __init__.py  __main__.py  block_builder.py  config.py  gbt_solve_wrapper.py  hardware.py  rpc_client.py  solo_client.py  solver_cpu.py  stratum_client.py
tests/: test_consensus_v3.py  test_experimental_rdna4.py  test_pool_share_submission.py  test_pool_visibility_metrics.py
