[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amdbtx-miner"
version = "1.0.0"
description = "AMD GPU native stratum miner for BTX. Wraps btx-gbt-solve-hip and speaks stratum/2.0-matmul."
requires-python = ">=3.10"
authors = [{ name = "AMDBTX" }]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
amdbtx-miner = "amdbtx_miner.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amdbtx_miner"]

[tool.ruff]
line-length = 100
target-version = "py311"
