[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amdbtx_miner"
version = "1.1.0"
description = "AMD GPU miner for BTX — MineBtx pool and solo (btxd) mining"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "thekillsquad007"}]
dependencies = ["pyyaml>=6.0", "setuptools>=61.0"]

[project.scripts]
amdbtx-miner = "amdbtx_miner.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
